Added new components

--- a/shopping-list/src/locales/en.json
+++ b/shopping-list/src/locales/en.json
@@ -2,5 +2,7 @@
   "ok": "OK",
   "cancel": "Cancel",
   "save": "Save",
-  "delete": "Delete"
+  "delete": "Delete",
+  "removeListConfirmation": "Do you want to delete list {{listName}}?",
+  "removeListDescription": "You won't be able to restore this list. You and all list colaborators will lose access to it."
 }
