Translations updates, Product updates fixes

--- a/shopping-list/src/locales/da.json
+++ b/shopping-list/src/locales/da.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Annuller",
   "save": "Gem",
-  "delete": "Slet"
+  "delete": "Slet",
+  "removeListConfirmation": "Vil du slette listen {{listName}}?",
+  "removeListDescription": "Du vil ikke kunne gendanne denne liste. Du og alle liste-samarbejdspartnere mister adgang til den.",
+  "signInLink": "Log ind",
+  "signUpLink": "Tilmeld",
+  "logout": "Log ud",
+  "signIn": "Log ind",
+  "email": "Email",
+  "password": "Adgangskode",
+  "passwordsDoNotMatch": "Adgangskoderne stemmer ikke overens",
+  "signUp": "Tilmeld",
+  "fullName": "Fulde navn",
+  "username": "Brugernavn",
+  "confirmPassword": "Bekræft adgangskode",
+  "quantity": "Mængde",
+  "newList": "Ny liste",
+  "someListsCouldNotBeRemoved": "Nogle lister kunne ikke fjernes",
+  "yourLists": "Dine lister",
+  "removeListsConfirmation": "Vil du slette de valgte lister?",
+  "rename": "Omdøb",
+  "products": "Produkter"
 }
