--- a/shopping-list/src/locales/de.json
+++ b/shopping-list/src/locales/de.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Abbrechen",
   "save": "Speichern",
-  "delete": "Löschen"
+  "delete": "Löschen",
+  "removeListConfirmation": "Möchten Sie die Liste {{listName}} löschen?",
+  "removeListDescription": "Sie können diese Liste nicht wiederherstellen. Sie und alle Listenkollaborateure verlieren den Zugriff darauf.",
+  "signInLink": "Anmelden",
+  "signUpLink": "Registrieren",
+  "logout": "Abmelden",
+  "signIn": "Anmelden",
+  "email": "E-Mail",
+  "password": "Passwort",
+  "passwordsDoNotMatch": "Passwörter stimmen nicht überein",
+  "signUp": "Registrieren",
+  "fullName": "Vollständiger Name",
+  "username": "Benutzername",
+  "confirmPassword": "Passwort bestätigen",
+  "quantity": "Menge",
+  "newList": "Neue Liste",
+  "someListsCouldNotBeRemoved": "Einige Listen konnten nicht entfernt werden",
+  "yourLists": "Ihre Listen",
+  "removeListsConfirmation": "Möchten Sie die ausgewählten Listen löschen?",
+  "rename": "Umbenennen",
+  "products": "Produkte"
 }
