--- a/shopping-list/src/locales/en.json
+++ b/shopping-list/src/locales/en.json
@@ -4,5 +4,23 @@
   "save": "Save",
   "delete": "Delete",
   "removeListConfirmation": "Do you want to delete list {{listName}}?",
-  "removeListDescription": "You won't be able to restore this list. You and all list colaborators will lose access to it."
+  "removeListDescription": "You won't be able to restore this list. You and all list colaborators will lose access to it.",
+  "signInLink": "Sign in",
+  "signUpLink": "Sign up",
+  "logout": "Logout",
+  "signIn": "Sign in",
+  "email": "Email",
+  "password": "Password",
+  "passwordsDoNotMatch": "Passwords do not match",
+  "signUp": "Sign up",
+  "fullName": "Full name",
+  "username": "Username",
+  "confirmPassword": "Confirm password",
+  "quantity": "Quantity",
+  "newList": "New list",
+  "someListsCouldNotBeRemoved": "Some lists could not be removed",
+  "yourLists": "Your lists",
+  "removeListsConfirmation": "Do you want to delete selected lists?",
+  "rename": "Rename",
+  "products": "Products"
 }
