--- a/shopping-list/src/locales/es.json
+++ b/shopping-list/src/locales/es.json
@@ -2,5 +2,25 @@
   "ok": "Aceptar",
   "cancel": "Cancelar",
   "save": "Guardar",
-  "delete": "Eliminar"
+  "delete": "Eliminar",
+  "removeListConfirmation": "¿Quieres eliminar la lista {{listName}}?",
+  "removeListDescription": "No podrás restaurar esta lista. Tú y todos los colaboradores de la lista perderán el acceso a ella.",
+  "signInLink": "Iniciar sesión",
+  "signUpLink": "Registrarse",
+  "logout": "Cerrar sesión",
+  "signIn": "Iniciar sesión",
+  "email": "Correo electrónico",
+  "password": "Contraseña",
+  "passwordsDoNotMatch": "Las contraseñas no coinciden",
+  "signUp": "Registrarse",
+  "fullName": "Nombre completo",
+  "username": "Nombre de usuario",
+  "confirmPassword": "Confirmar contraseña",
+  "quantity": "Cantidad",
+  "newList": "Nueva lista",
+  "someListsCouldNotBeRemoved": "Algunas listas no se pudieron eliminar",
+  "yourLists": "Tus listas",
+  "removeListsConfirmation": "¿Quieres eliminar las listas seleccionadas?",
+  "rename": "Renombrar",
+  "products": "Productos"
 }
