--- a/shopping-list/src/locales/fi.json
+++ b/shopping-list/src/locales/fi.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Peruuta",
   "save": "Tallenna",
-  "delete": "Poista"
+  "delete": "Poista",
+  "removeListConfirmation": "Haluatko poistaa listan {{listName}}?",
+  "removeListDescription": "Et voi palauttaa tätä listaa. Sinä ja kaikki listan yhteistyökumppanit menetätte pääsyn siihen.",
+  "signInLink": "Kirjaudu sisään",
+  "signUpLink": "Rekisteröidy",
+  "logout": "Kirjaudu ulos",
+  "signIn": "Kirjaudu sisään",
+  "email": "Sähköposti",
+  "password": "Salasana",
+  "passwordsDoNotMatch": "Salasanat eivät täsmää",
+  "signUp": "Rekisteröidy",
+  "fullName": "Koko nimi",
+  "username": "Käyttäjänimi",
+  "confirmPassword": "Vahvista salasana",
+  "quantity": "Määrä",
+  "newList": "Uusi lista",
+  "someListsCouldNotBeRemoved": "Joidenkin listojen poistaminen ei onnistunut",
+  "yourLists": "Sinun listasi",
+  "removeListsConfirmation": "Haluatko poistaa valitut listat?",
+  "rename": "Nimeä uudelleen",
+  "products": "Tuotteet"
 }
