--- a/shopping-list/src/locales/fr.json
+++ b/shopping-list/src/locales/fr.json
@@ -2,5 +2,25 @@
   "ok": "D'accord",
   "cancel": "Annuler",
   "save": "Enregistrer",
-  "delete": "Supprimer"
+  "delete": "Supprimer",
+  "removeListConfirmation": "Voulez-vous supprimer la liste {{listName}}?",
+  "removeListDescription": "Vous ne pourrez pas restaurer cette liste. Vous et tous les collaborateurs de la liste perdrez l'accès à celle-ci.",
+  "signInLink": "Se connecter",
+  "signUpLink": "S'inscrire",
+  "logout": "Se déconnecter",
+  "signIn": "Se connecter",
+  "email": "Email",
+  "password": "Mot de passe",
+  "passwordsDoNotMatch": "Les mots de passe ne correspondent pas",
+  "signUp": "S'inscrire",
+  "fullName": "Nom complet",
+  "username": "Nom d'utilisateur",
+  "confirmPassword": "Confirmer le mot de passe",
+  "quantity": "Quantité",
+  "newList": "Nouvelle liste",
+  "someListsCouldNotBeRemoved": "Certaines listes n'ont pas pu être supprimées",
+  "yourLists": "Vos listes",
+  "removeListsConfirmation": "Voulez-vous supprimer les listes sélectionnées?",
+  "rename": "Renommer",
+  "products": "Produits"
 }
