--- a/shopping-list/src/locales/it.json
+++ b/shopping-list/src/locales/it.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Annulla",
   "save": "Salva",
-  "delete": "Elimina"
+  "delete": "Elimina",
+  "removeListConfirmation": "Vuoi eliminare la lista {{listName}}?",
+  "removeListDescription": "Non sarai in grado di ripristinare questa lista. Tu e tutti i collaboratori della lista perderete l'accesso ad essa.",
+  "signInLink": "Accedi",
+  "signUpLink": "Iscriviti",
+  "logout": "Disconnettersi",
+  "signIn": "Accedi",
+  "email": "Email",
+  "password": "Password",
+  "passwordsDoNotMatch": "Le password non corrispondono",
+  "signUp": "Iscriviti",
+  "fullName": "Nome completo",
+  "username": "Nome utente",
+  "confirmPassword": "Conferma password",
+  "quantity": "Quantità",
+  "newList": "Nuova lista",
+  "someListsCouldNotBeRemoved": "Alcune liste non possono essere rimosse",
+  "yourLists": "Le tue liste",
+  "removeListsConfirmation": "Vuoi eliminare le liste selezionate?",
+  "rename": "Rinomina",
+  "products": "Prodotti"
 }
