--- a/shopping-list/src/locales/ja.json
+++ b/shopping-list/src/locales/ja.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "キャンセル",
   "save": "保存",
-  "delete": "削除"
+  "delete": "削除",
+  "removeListConfirmation": "リスト {{listName}} を削除しますか？",
+  "removeListDescription": "このリストを復元することはできません。あなたとすべてのリスト協力者はアクセスを失います。",
+  "signInLink": "サインイン",
+  "signUpLink": "サインアップ",
+  "logout": "ログアウト",
+  "signIn": "サインイン",
+  "email": "メール",
+  "password": "パスワード",
+  "passwordsDoNotMatch": "パスワードが一致しません",
+  "signUp": "サインアップ",
+  "fullName": "フルネーム",
+  "username": "ユーザー名",
+  "confirmPassword": "パスワードを認証する",
+  "quantity": "数量",
+  "newList": "新しいリスト",
+  "someListsCouldNotBeRemoved": "一部のリストを削除できませんでした",
+  "yourLists": "あなたのリスト",
+  "removeListsConfirmation": "選択したリストを削除しますか？",
+  "rename": "名前を変更",
+  "products": "製品"
 }
