--- a/shopping-list/src/locales/ko.json
+++ b/shopping-list/src/locales/ko.json
@@ -2,5 +2,25 @@
   "ok": "확인",
   "cancel": "취소",
   "save": "저장",
-  "delete": "삭제"
+  "delete": "삭제",
+  "removeListConfirmation": "목록 {{listName}}을(를) 삭제하시겠습니까?",
+  "removeListDescription": "이 목록을 복원할 수 없습니다. 귀하와 모든 목록 협력자는 이에 대한 액세스 권한을 잃게 됩니다.",
+  "signInLink": "로그인",
+  "signUpLink": "가입",
+  "logout": "로그아웃",
+  "signIn": "로그인",
+  "email": "이메일",
+  "password": "비밀번호",
+  "passwordsDoNotMatch": "비밀번호가 일치하지 않습니다",
+  "signUp": "가입",
+  "fullName": "전체 이름",
+  "username": "사용자 이름",
+  "confirmPassword": "비밀번호 확인",
+  "quantity": "수량",
+  "newList": "새 목록",
+  "someListsCouldNotBeRemoved": "일부 목록을 제거할 수 없습니다",
+  "yourLists": "귀하의 목록",
+  "removeListsConfirmation": "선택한 목록을 삭제하시겠습니까?",
+  "rename": "이름 변경",
+  "products": "제품"
 }
