--- a/shopping-list/src/locales/nl.json
+++ b/shopping-list/src/locales/nl.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Annuleren",
   "save": "Opslaan",
-  "delete": "Verwijderen"
+  "delete": "Verwijderen",
+  "removeListConfirmation": "Wilt u de lijst {{listName}} verwijderen?",
+  "removeListDescription": "U kunt deze lijst niet herstellen. U en alle lijstmedewerkers verliezen de toegang ertoe.",
+  "signInLink": "Inloggen",
+  "signUpLink": "Aanmelden",
+  "logout": "Uitloggen",
+  "signIn": "Inloggen",
+  "email": "E-mail",
+  "password": "Wachtwoord",
+  "passwordsDoNotMatch": "Wachtwoorden komen niet overeen",
+  "signUp": "Aanmelden",
+  "fullName": "Volledige naam",
+  "username": "Gebruikersnaam",
+  "confirmPassword": "Bevestig wachtwoord",
+  "quantity": "Hoeveelheid",
+  "newList": "Nieuwe lijst",
+  "someListsCouldNotBeRemoved": "Sommige lijsten konden niet worden verwijderd",
+  "yourLists": "Uw lijsten",
+  "removeListsConfirmation": "Wilt u de geselecteerde lijsten verwijderen?",
+  "rename": "Hernoemen",
+  "products": "Producten"
 }
