--- a/shopping-list/src/locales/no.json
+++ b/shopping-list/src/locales/no.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Avbryt",
   "save": "Lagre",
-  "delete": "Slett"
+  "delete": "Slett",
+  "removeListConfirmation": "Vil du slette listen {{listName}}?",
+  "removeListDescription": "Du vil ikke kunne gjenopprette denne listen. Du og alle liste-samarbeidspartnere vil miste tilgangen til den.",
+  "signInLink": "Logg inn",
+  "signUpLink": "Registrer deg",
+  "logout": "Logg ut",
+  "signIn": "Logg inn",
+  "email": "E-post",
+  "password": "Passord",
+  "passwordsDoNotMatch": "Passordene stemmer ikke overens",
+  "signUp": "Registrer deg",
+  "fullName": "Fullt navn",
+  "username": "Brukernavn",
+  "confirmPassword": "Bekreft passord",
+  "quantity": "Mengde",
+  "newList": "Ny liste",
+  "someListsCouldNotBeRemoved": "Noen lister kunne ikke fjernes",
+  "yourLists": "Dine lister",
+  "removeListsConfirmation": "Vil du slette de valgte listene?",
+  "rename": "Gi nytt navn",
+  "products": "Produkter"
 }
