--- a/shopping-list/src/locales/pl.json
+++ b/shopping-list/src/locales/pl.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Anuluj",
   "save": "Zapisz",
-  "delete": "Usuń"
+  "delete": "Usuń",
+  "removeListConfirmation": "Czy chcesz usunąć listę {{listName}}?",
+  "removeListDescription": "Nie będziesz mógł przywrócić tej listy. Ty i wszyscy współpracownicy listy stracicie do niej dostęp.",
+  "signInLink": "Zaloguj się",
+  "signUpLink": "Zarejestruj się",
+  "logout": "Wyloguj się",
+  "signIn": "Zaloguj się",
+  "email": "Email",
+  "password": "Hasło",
+  "passwordsDoNotMatch": "Hasła nie pasują do siebie",
+  "signUp": "Zarejestruj się",
+  "fullName": "Pełne imię i nazwisko",
+  "username": "Nazwa użytkownika",
+  "confirmPassword": "Potwierdź hasło",
+  "quantity": "Ilość",
+  "newList": "Nowa lista",
+  "someListsCouldNotBeRemoved": "Niektórych list nie można było usunąć",
+  "yourLists": "Twoje listy",
+  "removeListsConfirmation": "Czy chcesz usunąć wybrane listy?",
+  "rename": "Zmień nazwę",
+  "products": "Produkty"
 }
