--- a/shopping-list/src/locales/pt.json
+++ b/shopping-list/src/locales/pt.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Cancelar",
   "save": "Salvar",
-  "delete": "Excluir"
+  "delete": "Excluir",
+  "removeListConfirmation": "Você quer deletar a lista {{listName}}?",
+  "removeListDescription": "Você não poderá restaurar esta lista. Você e todos os colaboradores da lista perderão o acesso a ela.",
+  "signInLink": "Entrar",
+  "signUpLink": "Inscrever-se",
+  "logout": "Sair",
+  "signIn": "Entrar",
+  "email": "Email",
+  "password": "Senha",
+  "passwordsDoNotMatch": "As senhas não coincidem",
+  "signUp": "Inscrever-se",
+  "fullName": "Nome completo",
+  "username": "Nome de usuário",
+  "confirmPassword": "Confirmar senha",
+  "quantity": "Quantidade",
+  "newList": "Nova lista",
+  "someListsCouldNotBeRemoved": "Algumas listas não puderam ser removidas",
+  "yourLists": "Suas listas",
+  "removeListsConfirmation": "Você quer deletar as listas selecionadas?",
+  "rename": "Renomear",
+  "products": "Produtos"
 }
