--- a/shopping-list/src/locales/ru.json
+++ b/shopping-list/src/locales/ru.json
@@ -2,5 +2,25 @@
   "ok": "ОК",
   "cancel": "Отмена",
   "save": "Сохранить",
-  "delete": "Удалить"
+  "delete": "Удалить",
+  "removeListConfirmation": "Вы хотите удалить список {{listName}}?",
+  "removeListDescription": "Вы не сможете восстановить этот список. Вы и все сотрудники списка потеряете доступ к нему.",
+  "signInLink": "Войти",
+  "signUpLink": "Зарегистрироваться",
+  "logout": "Выйти",
+  "signIn": "Войти",
+  "email": "Электронная почта",
+  "password": "Пароль",
+  "passwordsDoNotMatch": "Пароли не совпадают",
+  "signUp": "Зарегистрироваться",
+  "fullName": "Полное имя",
+  "username": "Имя пользователя",
+  "confirmPassword": "Подтвердите пароль",
+  "quantity": "Количество",
+  "newList": "Новый список",
+  "someListsCouldNotBeRemoved": "Некоторые списки не удалось удалить",
+  "yourLists": "Ваши списки",
+  "removeListsConfirmation": "Вы хотите удалить выбранные списки?",
+  "rename": "Переименовать",
+  "products": "Продукты"
 }
