--- a/shopping-list/src/locales/sv.json
+++ b/shopping-list/src/locales/sv.json
@@ -2,5 +2,25 @@
   "ok": "OK",
   "cancel": "Avbryt",
   "save": "Spara",
-  "delete": "Radera"
+  "delete": "Radera",
+  "removeListConfirmation": "Vill du radera listan {{listName}}?",
+  "removeListDescription": "Du kommer inte att kunna återställa denna lista. Du och alla listmedarbetare kommer att förlora åtkomst till den.",
+  "signInLink": "Logga in",
+  "signUpLink": "Registrera",
+  "logout": "Logga ut",
+  "signIn": "Logga in",
+  "email": "E-post",
+  "password": "Lösenord",
+  "passwordsDoNotMatch": "Lösenorden matchar inte",
+  "signUp": "Registrera",
+  "fullName": "Fullständigt namn",
+  "username": "Användarnamn",
+  "confirmPassword": "Bekräfta lösenord",
+  "quantity": "Mängd",
+  "newList": "Ny lista",
+  "someListsCouldNotBeRemoved": "Vissa listor kunde inte tas bort",
+  "yourLists": "Dina listor",
+  "removeListsConfirmation": "Vill du radera de valda listorna?",
+  "rename": "Byt namn",
+  "products": "Produkter"
 }
