--- a/shopping-list/src/locales/zh.json
+++ b/shopping-list/src/locales/zh.json
@@ -2,5 +2,25 @@
   "ok": "确定",
   "cancel": "取消",
   "save": "保存",
-  "delete": "删除"
+  "delete": "删除",
+  "removeListConfirmation": "您要删除列表 {{listName}} 吗？",
+  "removeListDescription": "您将无法恢复此列表。您和所有列表合作者将失去访问权限。",
+  "signInLink": "登录",
+  "signUpLink": "注册",
+  "logout": "登出",
+  "signIn": "登录",
+  "email": "电子邮件",
+  "password": "密码",
+  "passwordsDoNotMatch": "密码不匹配",
+  "signUp": "注册",
+  "fullName": "全名",
+  "username": "用户名",
+  "confirmPassword": "确认密码",
+  "quantity": "数量",
+  "newList": "新列表",
+  "someListsCouldNotBeRemoved": "有些列表无法删除",
+  "yourLists": "您的列表",
+  "removeListsConfirmation": "您要删除选定的列表吗？",
+  "rename": "重命名",
+  "products": "产品"
 }
